# liteagent

./: .gitignore  .mutmut_config  .pre-commit-config.yaml  ARCHITECTURE.md  BetterToolCallingSupport.md  CLAUDE.md  FUNCTION_CALLING_CLEANUP_SUMMARY.md  LICENSE  MANIFEST.in  README.md  TEST_EFFECTIVENESS_ANALYSIS_REPORT.md  _cursorrules  agent_events.jsonl  comprehensive_debug_test.py  debug_anthropic_models.py  debug_anthropic_models2.py  debug_anthropic_models3.py  debug_cache_payload.py  debug_caching.py  debug_pricing_api.py  debug_pricing_api2.py  debug_tool_calling_types.py  ephemeral_agent_implementation.md  example_observability.py  example_triage_agent.py  liteagent_main.py  main.py  pyproject.toml  requirements.txt  run_tests.py  setup.py  taskbased_agent_implementation.md  test_caching_large.py  test_container.py  test_fixed_forked_agents.py  test_forked_caching.py  test_honest_caching.py  test_liteagent_tool.py  test_new_system.py  test_pricing_fix.py  (+1 more)
.claude/: settings.local.json
.claude/agents/: test-effectiveness-analyzer.md
Tasks/: 2025-08-18_ForkedAgents_Research.md  2025-08-19_Blackboard_MultiAgent_System.md  2025-08-27_Testability_Improvements.md
cli/: __init__.py  commands.py  main.py
docs/: ARCHITECTURE.md  BetterToolCallingSupport.md  LiteCodeAgent-Implementation.md  TEST_FEATURE_MATRIX.md  api_reference.md  code_improvements.md  examples_and_cli.md  migration_guides.md  publish-to-pypi.md  quickstart.md
docs/development/: ARCHITECTURE.md  CONSOLIDATED_DEVELOPMENT_GUIDE.md  FUNCTION_CALLING_CLEANUP_TASKS.md  REPOSITORY_CLEANUP_PLAN.md  REPOSITORY_STRUCTURE_CLEANUP_SUMMARY.md
docs/examples/: basic_examples.py
docs/guides/: api_reference.md  quickstart.md
examples/: .env.example  README.md  __init__.py  blackboard_demo.py  code_agent_example.py  forked_agents_example.py  forked_agents_v2_demo.py  mcp_example.py  orchestrator_example.py  requirements-examples.txt  software_qa_swarm.py  tools.py
liteagent/: __init__.py  __main__.py  agent.py  agent_registry.py  agent_tool.py  async_executor.py  blackboard.py  capabilities.py  cli.py  cli_commands.py  code_agent.py  container_executor.py  cost_tracking.py  examples.py  forked_agent.py  forked_agent_v2.py  mcp_adapter.py  memory.py  metrics.py  model_capabilities.json  model_capabilities.py  model_config.json  models.py  multi_agent_coordinator.py  new_agent.py  observer.py  pattern_tool_handler.py  provider_cost_tracker.py  provider_roles.py  rate_limiter.py  simple_tool_handler.py  tool_calling.py  tool_calling_config.py  tool_calling_detection.py  tool_calling_types.py  tools.py  unified_forked_agent.py  utils.py  validation_strategies.py  xpath_extractor.py
liteagent/config/: rate_limits.json
liteagent/container/: README.md  __init__.py  executor.py
liteagent/handlers/: __init__.py  anthropic_handler.py  auto_detect_handler.py  groq_handler.py  noop_handler.py  ollama_handler.py  openai_handler.py  structured_output_handler.py  text_based_handler.py
liteagent/providers/: __init__.py  anthropic_provider.py  base.py  deterministic_mock_provider.py  factory.py  gemini_chat.py  groq_provider.py  mistral_provider.py  mock_provider.py  ollama_provider.py  openai_assistants.py  openai_provider.py
mutants/: mutmut-stats.json
mutants/liteagent/: __init__.py  __main__.py  agent.py  agent_tool.py  capabilities.py  cli.py  cli_commands.py  examples.py  mcp_adapter.py  memory.py  models.py  observer.py  provider_roles.py  tool_calling.py  tool_calling_types.py  tools.py  utils.py
mutants/tests/: mutation_test.py  requirements-test.txt  run_tests.sh
scripts/dev-tools/: README.md  detect_tool_calling_format.py  find_similarities.py  test_pattern_backend.py  test_tool_call.sh
tests/: README.md  TEST_FEATURE_MATRIX.md  __init__.py  error_injection.py  mutation_test.py  property_testing.py  provider_specific.py  pytest.ini  requirements-test.txt  run_tests.sh  test_basic_container.py  tool_enforcement.py
tests/integration/: __init__.py  cleanup_tests.sh  conftest.py  debug_api_calls.py  fix_assertions.md  test_anthropic_claude.py  test_container_integration.py  test_forked_agent_integration.py  test_gpt4o_mini.py  test_groq_llama.py  test_memory_model_types.py  test_mistral_integration.py  (+7 more)
tool_calling_data/: response_anthropic_claude-3-5-haiku-20241022.json  response_anthropic_claude-3-5-sonnet-20240620.json  response_anthropic_claude-3-5-sonnet-20241022.json  response_anthropic_claude-3-7-sonnet-20250219.json  response_anthropic_claude-3-haiku-20240307.json  response_anthropic_claude-3-opus-20240229.json  response_anthropic_claude-3-sonnet-20240229.json  response_groq_deepseek-r1-distill-llama-70b.json  response_groq_deepseek-r1-distill-qwen-32b.json  response_groq_gemma2-9b-it.json  response_groq_llama-3.1-8b-instant.json  response_groq_llama-3.2-11b-vision-preview.json  response_groq_llama-3.2-1b-preview.json  response_groq_llama-3.2-3b-preview.json  response_groq_llama-3.2-90b-vision-preview.json  response_groq_llama-3.3-70b-specdec.json  response_groq_llama-3.3-70b-versatile.json  response_groq_llama3-70b-8192.json  response_groq_llama3-8b-8192.json  response_groq_mistral-saba-24b.json  response_groq_mixtral-8x7b-32768.json  response_groq_qwen-2.5-32b.json  response_groq_qwen-2.5-coder-32b.json  response_ollama_llama3.3-latest.json  response_ollama_qwen2.5-coder-32b.json  response_openai_gpt-3.5-turbo-0125.json  response_openai_gpt-3.5-turbo-1106.json  response_openai_gpt-3.5-turbo-16k.json  response_openai_gpt-3.5-turbo.json  response_openai_gpt-4-0125-preview.json  response_openai_gpt-4-0613.json  response_openai_gpt-4-1106-preview.json  response_openai_gpt-4-turbo-2024-04-09.json  response_openai_gpt-4-turbo-preview.json  response_openai_gpt-4-turbo.json  response_openai_gpt-4.5-preview-2025-02-27.json  response_openai_gpt-4.5-preview.json  response_openai_gpt-4.json  response_openai_gpt-4o-2024-05-13.json  response_openai_gpt-4o-2024-08-06.json  (+4 more)
tools/: batch_test_patterns.py  call_collector.py  find_node.py  test_pattern_backend.py  test_pattern_handler.py  test_tool_call.sh
(+73 files in other folders)
