[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "liteagent"
version = "0.1.0"
description = "A lightweight agent framework using LiteLLM for LLM interactions"
readme = "README.md"
authors = [
    {name = "LiteAgent Team", email = "info@liteagent.org"}
]
license = {text = "Internal, not decided yet"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/liteagent"
"Bug Tracker" = "https://github.com/yourusername/liteagent/issues"
"Documentation" = "https://github.com/yourusername/liteagent#readme"

[project.scripts]
liteagent = "liteagent.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "pytest-xdist>=3.3.1",
    "coverage>=7.3.1",
]

[tool.setuptools]
packages = ["liteagent"]

[tool.setuptools.package-data]
liteagent = ["model_capabilities.json"] 